[project]
name = "test_creaw"
version = "0.1.0"
description = "test_creaw using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
test_creaw = "test_creaw.main:run"
run_crew = "test_creaw.main:run"
train = "test_creaw.main:train"
replay = "test_creaw.main:replay"
test = "test_creaw.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
